--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4",
+    "mongodb": "4.1",
+    "mongoose": "^7.5.4",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.22"
   }
 }
